# MA-Pearl

./: ANALYSIS.md  CLAUDE.local.md  compare_soft_arm_performance.py  sb3_baseline_test.py  simple_soft_arm_demo.py  train_soft_arm_every_step.py  train_soft_arm_pearl.py  visualize_soft_arm_agent.py  visualize_trained_agent.py
archived_experiments/: demo_arm_learning.py  monitor_training.py  test_arm_sac.py  test_arm_sac_3d.py  test_sac_her.py  test_training.py  train_arm.py
pearl/neural_networks/common/: utils.py
pearl/neural_networks/sequential_decision_making/: robotic_actor_networks.py
pearl/replay_buffers/sequential_decision_making/: __init__.py
pearl/user_envs/wrappers/: __init__.py  dynamic_action_env.py  gym_avg_torque_cost.py  partial_observability.py  safety.py  sparse_reward.py  subprocess_vector_env.py  vectorized_wrapper.py
pearl/utils/instantiations/environments/soft_arm/robot_catch/env/: CMakeLists.txt  __init__.py  ball_thrower.py  env_factory.py  environment.py  noise_tutorial.py  robot_arm.py  robot_arm_binding.cpp  robot_arm_python.py  visualizer.py
pearl/utils/scripts/: stable_sac.py  train_arm_multiprocess.py
pearl_arm_results/: pearl_arm_3dof_metrics.json  pearl_arm_3dof_results.json  pearl_arm_4dof_metrics.json  pearl_arm_4dof_results.json
sb3_arm_logs/: evaluations.npz
soft_arm_comparison/: performance_stats.txt
soft_arm_every_step_results/: training_results.json
soft_arm_pearl_results/: training_results.json
soft_arm_pearl_results/checkpoints/: best_checkpoint.pt  latest_checkpoint.pt
(+201 files in other folders)
